--- a/style.css
+++ b/style.css
@@ -5,4 +5,11 @@ h1{
   color:pink;
   text-align: center;
   font-family:sans-serif;
+  font-family:sans-serif;
+}
+.box{
+  width:350px;
+  height:350px;
+  background-color: blue;
+  border-radius:15px;
 }
